--- a/app/css/main.less
+++ b/app/css/main.less
@@ -1,3 +1,48 @@
 // Main less file for your application.
 // Use `@import` to use other less files
 // relative to 'app/css' or 'vendor/css'.
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #f5f5f5;
+}
+
+/* Custom page CSS
+-------------------------------------------------- */
+/* Not required for template or sticky footer method.
+
+  ummm yes it $#@!-ing is.  
+
+  thanks for the swell advice and the free DOM scavenger hunt.
+
+  on the bright-side, i guess i learned a little.
+
+ */
+
+body > .container {
+  /* NOTE: not really sure why i had to cheat with the bottom padding here! */
+  padding: 60px 15px 60px;
+}
+
+#footer > .container {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+.container .text-muted {
+  margin: 20px 0;
+}
