--- a/app/css/main.less
+++ b/app/css/main.less
@@ -47,6 +47,12 @@ body > .container {
   margin: 20px 0;
 }
 
+/* External Fonts
+--------------------------------------------------
+  open fonts here: https://www.google.com/fonts
+*/
+
+@import url(http://fonts.googleapis.com/css?family=Lobster|Ceviche+One|Roboto+Condensed:400italic,700italic,700,400);
 
 /* Bootstrap Theme Configuration
 --------------------------------------------------
@@ -65,3 +71,4 @@ body > .container {
 
 // @brand-primary: #ABCDEF;
 
+@font-family-sans-serif:  'Roboto Condensed', "Helvetica Neue", Helvetica, Arial, sans-serif;
