switched from Roboto to Roboto Condensed
* it's easier on the eyes

--- a/app/css/main.less
+++ b/app/css/main.less
@@ -52,7 +52,7 @@ body > .container {
   open fonts here: https://www.google.com/fonts
 */
 
-@import url(http://fonts.googleapis.com/css?family=Lobster|Roboto+Condensed:400italic,700italic,700,400);
+@import url(http://fonts.googleapis.com/css?family=Lobster|Roboto:400italic,700italic,700,400);
 
 /* Bootstrap Theme Configuration
 --------------------------------------------------
@@ -73,7 +73,10 @@ body > .container {
 /*@brand-primary: #ABCDEF;*/
 
 /*set custom font*/
-@font-family-sans-serif:  'Roboto Condensed', "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-family-sans-serif:  'Roboto', "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+/*changing the base font size doesn't affect all fonts evenly*/
+@font-size-base:          14px;  
 
 /*set font-awesome glyphs*/
 @icon-font-name:          "fontawesome-webfont";
