--- a/app/css/main.less
+++ b/app/css/main.less
@@ -52,7 +52,7 @@ body > .container {
   open fonts here: https://www.google.com/fonts
 */
 
-@import url(http://fonts.googleapis.com/css?family=Lobster|Roboto:400italic,700italic,700,400);
+@import url(https://fonts.googleapis.com/css?family=Lobster|Roboto:400italic,700italic,700,400);
 
 /* Bootstrap Theme Configuration
 --------------------------------------------------
