social buttons: fixed icons so there's no underline on hover

--- a/app/css/main.less
+++ b/app/css/main.less
@@ -17,7 +17,7 @@ body {
   background-color: #f5f5f5;
 }
 
-/* Custom page CSS
+/* CSS fixes for footer
 -------------------------------------------------- */
 /* Not required for template or sticky footer method.
 
@@ -45,6 +45,13 @@ body > .container {
 
 .font-lobster {
   font-family: 'Lobster', Helvetica, Arial, sans-serif;
+}
+
+/* Social buttons
+--------------------------------------------------
+*/
+a.share-icon:hover {
+  text-decoration: none;
 }
 
 /* External Fonts
