changed css classname to be generic

--- a/app/css/main.less
+++ b/app/css/main.less
@@ -43,7 +43,7 @@ body > .container {
   margin: 20px 0;
 }
 
-.font-lobster {
+.font-title {
   font-family: 'Lobster', Helvetica, Arial, sans-serif;
 }
 
