* added sonsie one font for title

--- a/app/css/main.less
+++ b/app/css/main.less
@@ -44,7 +44,7 @@ body > .container {
 }
 
 .font-title {
-  font-family: 'Lobster', Helvetica, Arial, sans-serif;
+  font-family: 'Sonsie One', Helvetica, Arial, sans-serif;
 }
 
 /* Social buttons
@@ -59,7 +59,7 @@ a.share-icon:hover {
   open fonts here: https://www.google.com/fonts
 */
 
-@import url(https://fonts.googleapis.com/css?family=Lobster|Roboto:400italic,700italic,700,400);
+@import url(https://fonts.googleapis.com/css?family=Sonsie+One|Roboto:400italic,700italic,700,400);
 
 /* Bootstrap Theme Configuration
 --------------------------------------------------
